# imp.graph

./: .gitignore  LICENSE  README.md  flake.nix
nix/: default.nix
rs/: Cargo.toml  Trunk.toml  index.html  rustfmt.toml
rs/public/: styles.scss
rs/src/: lib.rs  main.rs
rs/src/components/: mod.rs
rs/src/components/force_graph/: component.rs  mod.rs  particles.rs  render.rs  scale.rs  state.rs  theme.rs  types.rs
tests/: default.nix
