[package]
name = "imp-graph"
version = "0.1.0"
edition = "2024"
description = "Interactive force-directed graph visualization for imp flake dependencies"
authors = ["Albert O'Shea <albertoshea2@gmail.com>"]
license = "MIT"

[workspace.lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "warn"

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
force_graph = "0.4.0"
js-sys = "=0.3.77"
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "=0.2.100"
web-sys = { version = "=0.3.77", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlScriptElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "MouseEvent",
    "WheelEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "DomRect",
    "CssStyleDeclaration",
] }

[lints]
workspace = true

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
